<resources>
    <string name="app_name">LocalContact</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="query">Tìm Kiếm</string>
    <string name="call">Call</string>
    <string name="sms">SMS</string>
    <string name="favorite">Favorite</string>
    <string name="name">Name</string>
    <string name="bias_tv_sdt">0.4</string>
    <string name="bias_tv_name">0.3</string>
</resources>
